--- a/_Layout.html
+++ b/_Layout.html
@@ -36,7 +36,7 @@
 
       <hr/>
       <div style="span-24 last">
-        <small>Copyright (c)2011, 2012 Cees de Groot. All rights reserved. Last edited {{ page.date }}. Available on IPv6. No users where harmed during testing of this site.</small>
+        <small>Copyright (c)2011, 2012 Millie Top. All rights reserved. Last edited {{ page.date }}. Available on IPv6. No users where harmed during testing of this site.</small>
       </div>
     </div>
   </body>
