--- a/_Layout.html
+++ b/_Layout.html
@@ -32,6 +32,7 @@
 
       <div class="column last span-4 sidebar">
         <div><a href="{{ wiki.base_path }}Home.html">Home</a></div>
+        <div><a href="{{ wiki.base_path }}gallery/index.html">Schilderijen</a></div>
       </div>
 
       <hr/>
