--- a/gallery/content/IMG_1006_large.html
+++ b/gallery/content/IMG_1006_large.html
@@ -37,7 +37,7 @@ cellColor="#949494";
     <h1 onclick="clickTarget( this, 'metadata.siteTitle.value' );" id="metadata.siteTitle.value" class="textColor">Millie Top</h1>
   </div>
   <div id="collectionHeader">
-    <h1 onclick="clickTarget( this, 'metadata.groupTitle.value' );" id="metadata.groupTitle.value" class="textColor">Schilderijen</h1>
+    <h1 onclick="clickTarget( this, 'metadata.groupTitle.value' );" id="metadata.groupTitle.value" class="textColor">Paintings</h1>
     <p onclick="clickTarget( this, 'metadata.groupDescription.value' );" id="metadata.groupDescription.value" class="textColor"></p>
   </div>
 
@@ -77,7 +77,7 @@ cellColor="#949494";
 
 	  
       <div id="detailCaption" class="detailText">
-              </div>
+        acrylic on canvas      </div>
     </div>
   </div>
   <div class="clear">
@@ -86,8 +86,8 @@ cellColor="#949494";
 
   
   <div id="contact">
-          <a href="../"> <span
-        class="textColor" id="metadata.contactInfo.value"></span>
+          <a href="../"> <p
+        class="textColor" id="metadata.contactInfo.value"></p>
           </a>
       </div>
   <div class="clear">
