--- a/gallery/content/IMG_1010_large.html
+++ b/gallery/content/IMG_1010_large.html
@@ -37,7 +37,7 @@ cellColor="#949494";
     <h1 onclick="clickTarget( this, 'metadata.siteTitle.value' );" id="metadata.siteTitle.value" class="textColor">Millie Top</h1>
   </div>
   <div id="collectionHeader">
-    <h1 onclick="clickTarget( this, 'metadata.groupTitle.value' );" id="metadata.groupTitle.value" class="textColor">Schilderijen</h1>
+    <h1 onclick="clickTarget( this, 'metadata.groupTitle.value' );" id="metadata.groupTitle.value" class="textColor">Paintings</h1>
     <p onclick="clickTarget( this, 'metadata.groupDescription.value' );" id="metadata.groupDescription.value" class="textColor"></p>
   </div>
 
@@ -47,7 +47,7 @@ cellColor="#949494";
   <div id="stage2">
     <div id="previewFull" class="borderTopLeft borderBottomRight">
       <div id="detailTitle" class="detailText">
-        Vreemde Vogel      </div>
+        Strange Bird      </div>
 
 	  
       <div class="detailNav">
@@ -66,7 +66,7 @@ cellColor="#949494";
                               <img src="images/large/IMG_1010.jpg"
                     class="previewFullImage preview"
                     id="previewImage"
-                    alt="Vreemde Vogel"
+                    alt="Strange Bird"
                                         onclick="var node=parentNode.parentNode.parentNode.parentNode; if( node.click ) { return node.click(); } else { return true; }">
                             </div>
           </div>
@@ -77,7 +77,7 @@ cellColor="#949494";
 
 	  
       <div id="detailCaption" class="detailText">
-              </div>
+        acrylic on canvas      </div>
     </div>
   </div>
   <div class="clear">
@@ -86,8 +86,8 @@ cellColor="#949494";
 
   
   <div id="contact">
-          <a href="../"> <span
-        class="textColor" id="metadata.contactInfo.value"></span>
+          <a href="../"> <p
+        class="textColor" id="metadata.contactInfo.value"></p>
           </a>
       </div>
   <div class="clear">
