--- a/gallery/content/IMG_9602_large.html
+++ b/gallery/content/IMG_9602_large.html
@@ -47,26 +47,26 @@ cellColor="#949494";
   <div id="stage2">
     <div id="previewFull" class="borderTopLeft borderBottomRight">
       <div id="detailTitle" class="detailText">
-        Sunset I      </div>
+        Backyard Sparrow      </div>
 
 	  
       <div class="detailNav">
         <ul>
-                                    <li class="previous"> <a class="paginationLinks detailText" href="../content/IMG_1006_large.html">Previous</a> </li>
+                                    <li class="previous"> <a class="paginationLinks detailText" href="../content/IMG_9599_large.html">Previous</a> </li>
                                     <li class="index"> <a href="../index.html" class="detailLinks detailText">Index</a> </li>
-                          <li class="next"> <a class="paginationLinks detailText" href="../content/IMG_1008_large.html">Next</a> </li>
+                          <li class="next"> <a class="paginationLinks detailText" href="../content/IMG_9603_large.html">Next</a> </li>
                                           </ul>
       </div>
 
       <a href="../index.html">
 
-      <div style="margin-left:15px;">
+      <div style="margin-left:283px;">
                   <div class="dropShadow">
             <div class="inner">
-                              <img src="images/large/IMG_1007.jpg"
+                              <img src="images/large/IMG_9602.jpg"
                     class="previewFullImage preview"
                     id="previewImage"
-                    alt="Sunset I"
+                    alt="Backyard Sparrow"
                                         onclick="var node=parentNode.parentNode.parentNode.parentNode; if( node.click ) { return node.click(); } else { return true; }">
                             </div>
           </div>
@@ -77,7 +77,7 @@ cellColor="#949494";
 
 	  
       <div id="detailCaption" class="detailText">
-        acrylic on canvas      </div>
+        20x60cm acrylic on canvas      </div>
     </div>
   </div>
   <div class="clear">
