--- a/gallery/index.html
+++ b/gallery/index.html
@@ -37,7 +37,7 @@ cellColor="#949494";
     <h1 onclick="clickTarget( this, 'metadata.siteTitle.value' );" id="metadata.siteTitle.value" class="textColor">Millie Top</h1>
   </div>
   <div id="collectionHeader">
-    <h1 onclick="clickTarget( this, 'metadata.groupTitle.value' );" id="metadata.groupTitle.value" class="textColor">Schilderijen</h1>
+    <h1 onclick="clickTarget( this, 'metadata.groupTitle.value' );" id="metadata.groupTitle.value" class="textColor">Paintings</h1>
     <p onclick="clickTarget( this, 'metadata.groupDescription.value' );" id="metadata.groupDescription.value" class="textColor"></p>
   </div>
 
@@ -139,6 +139,68 @@ cellColor="#949494";
             </a> </div>
                   <div class="clear">
           </div>
+                  <div class="thumbnail borderTopLeft" onmouseover="window.gridOn( this.parentNode, 'ID253888_thumb' );" onmouseout="window.gridOff( this.parentNode );" onclick="window.location.href='content/IMG_9599_large.html'">
+            <div class="itemNumber">9</div>
+            <a href="content/IMG_9599_large.html" onclick="return needThumbImgLink;">
+            <div style="margin-left:15px; margin-top:59px;">
+                            <div class="dropShadow">
+                <div class="inner">
+                                    <img src="content/images/thumb/IMG_9599.jpg" id="ID253888_thumb" alt="" class="thumb" />
+                                  </div>
+              </div>
+                          </div>
+            </a> </div>
+                  <div class="thumbnail borderTopLeft" onmouseover="window.gridOn( this.parentNode, 'ID256521_thumb' );" onmouseout="window.gridOff( this.parentNode );" onclick="window.location.href='content/IMG_9602_large.html'">
+            <div class="itemNumber">10</div>
+            <a href="content/IMG_9602_large.html" onclick="return needThumbImgLink;">
+            <div style="margin-left:59px; margin-top:15px;">
+                            <div class="dropShadow">
+                <div class="inner">
+                                    <img src="content/images/thumb/IMG_9602.jpg" id="ID256521_thumb" alt="" class="thumb" />
+                                  </div>
+              </div>
+                          </div>
+            </a> </div>
+                  <div class="thumbnail borderTopLeft" onmouseover="window.gridOn( this.parentNode, 'ID256533_thumb' );" onmouseout="window.gridOff( this.parentNode );" onclick="window.location.href='content/IMG_9603_large.html'">
+            <div class="itemNumber">11</div>
+            <a href="content/IMG_9603_large.html" onclick="return needThumbImgLink;">
+            <div style="margin-left:59px; margin-top:15px;">
+                            <div class="dropShadow">
+                <div class="inner">
+                                    <img src="content/images/thumb/IMG_9603.jpg" id="ID256533_thumb" alt="" class="thumb" />
+                                  </div>
+              </div>
+                          </div>
+            </a> </div>
+                  <div class="thumbnail borderTopLeft borderRight" onmouseover="window.gridOn( this.parentNode, 'ID256545_thumb' );" onmouseout="window.gridOff( this.parentNode );" onclick="window.location.href='content/IMG_9604_large.html'">
+            <div class="itemNumber">12</div>
+            <a href="content/IMG_9604_large.html" onclick="return needThumbImgLink;">
+            <div style="margin-left:15px; margin-top:31px;">
+                            <div class="dropShadow">
+                <div class="inner">
+                                    <img src="content/images/thumb/IMG_9604.jpg" id="ID256545_thumb" alt="" class="thumb" />
+                                  </div>
+              </div>
+                          </div>
+            </a> </div>
+                  <div class="clear">
+          </div>
+                  <div class="thumbnail borderTopLeft" onmouseover="window.gridOn( this.parentNode, 'ID256625_thumb' );" onmouseout="window.gridOff( this.parentNode );" onclick="window.location.href='content/IMG_9607_large.html'">
+            <div class="itemNumber">13</div>
+            <a href="content/IMG_9607_large.html" onclick="return needThumbImgLink;">
+            <div style="margin-left:17px; margin-top:15px;">
+                            <div class="dropShadow">
+                <div class="inner">
+                                    <img src="content/images/thumb/IMG_9607.jpg" id="ID256625_thumb" alt="" class="thumb" />
+                                  </div>
+              </div>
+                          </div>
+            </a> </div>
+                  <div class="emptyThumbnail borderTopLeft "></div>
+                  <div class="emptyThumbnail borderTopLeft "></div>
+                  <div class="emptyThumbnail borderTopLeft  borderRight"></div>
+                  <div class="clear">
+          </div>
                   <div class="emptyThumbnail borderTopLeft  borderBottom"></div>
                   <div class="emptyThumbnail borderTopLeft  borderBottom"></div>
                   <div class="emptyThumbnail borderTopLeft  borderBottom"></div>
@@ -155,8 +217,8 @@ cellColor="#949494";
 
   
   <div id="contact">
-          <a href="./"> <span
-        class="textColor" id="metadata.contactInfo.value"></span>
+          <a href="./"> <p
+        class="textColor" id="metadata.contactInfo.value"></p>
           </a>
       </div>
   <div class="clear">
