--- a/_Layout.html
+++ b/_Layout.html
@@ -32,12 +32,12 @@
 
       <div class="column last span-4 sidebar">
         <div><a href="{{ wiki.base_path }}Home.html">Home</a></div>
-        <div><a href="{{ wiki.base_path }}gallery/index.html">Schilderijen</a></div>
+        <div><a href="{{ wiki.base_path }}gallery/index.html">Paintings</a></div>
       </div>
 
       <hr/>
       <div style="span-24 last">
-        <small>Copyright (c)2011, 2012 Millie Top. All rights reserved. Last edited {{ page.date }}. Available on IPv6. No users where harmed during testing of this site.</small>
+        <small>Copyright (c)2011-2014 Millie Top. All rights reserved. Last edited {{ page.date }}. Available on IPv6. No users where harmed during testing of this site.</small>
       </div>
     </div>
   </body>
